add contact page with map and address

--- a/profiles.html
+++ b/profiles.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="copyright">
+    <div class="main">
       Copyright cats cats cats 2016
     </div>
   </body>
