--- a/profiles.html
+++ b/profiles.html
@@ -53,9 +53,79 @@
             Eyes: Blood Red <br>
           </p>
         </div>
+        <div class="item">
+          <h3>Ducky</h3>
+          <img src="http://www.placekitten.com/300/302" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
+        <div class="item">
+          <h3>Barfy</h3>
+          <img src="http://www.placekitten.com/301/301" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
+        <div class="item">
+          <h3>Loren</h3>
+          <img src="http://www.placekitten.com/301/299" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
+        <div class="item">
+          <h3>Diego (the black one)</h3>
+          <img src="http://www.placekitten.com/299/301" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
+        <div class="item">
+          <h3>Kimberley</h3>
+          <img src="http://www.placekitten.com/303/299" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
+        <div class="item">
+          <h3>Doug</h3>
+          <img src="http://www.placekitten.com/299/300" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
+        <div class="item">
+          <h3>Kyle</h3>
+          <img src="http://www.placekitten.com/298/301" alt="first cat"/>
+          <p>
+            Background: Sparky is an energetic fluffy white friend!<br>
+            Age: 5 months <br>
+            Color: White <br>
+            Eyes: Blood Red <br>
+          </p>
+        </div>
       </div>
     </div>
-    <div class="main">
+    <div class="copyright">
       Copyright cats cats cats 2016
     </div>
   </body>
